--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 
-		<title>Oliur Rahman</title>
+		<title>Brian Iversen | Software Engineer</title>
 
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -16,33 +16,34 @@
 
 	<body class="animated bounceInDown">
 		<div class="avatar">
-			<img src="img/avatar.png" alt="Avatar">
+			<img src="img/avatar.jpg" alt="Avatar">
 		</div>
 
 		<div class="content">
-			<h1 class="title">Your<br>Name</h1>
+			<h1 class="title">Brian<br>Iversen</h1>
 
 			<p>
-				Put your short bio here.<br>
-				Put where you're from here.
+        I am a full-stack software engineer. I love working with various MVCS (BackboneJS, AngularJS, etc) and server frameworks like ExpressJS.
+        I've also developed for hardware such as the Leap Motion Controller and the Oculus Rift VR headset<br>
+        San Francisco, CA
 			</p>
 
 			<ul class="social-icons">
-				<li><a class="twitter" href="#" title="Twitter">Twitter</a></li>
-				<li><a class="facebook" href="#" title="Facebook">Facebook</a></li>
-				<li><a class="googleplus" href="#" title="Google+">Google+</a></li>
-				<li><a class="dribbble" href="#" title="Dribbble">Dribbble</a></li>
-				<li><a class="instagram" href="#" title="Instagram">Instagram</a></li>
-				<li><a class="flickr" href="#" title="Flickr">Flickr</a></li>
+				<li><a class="linkedin" href="http://www.linkedin.com/in/biversen1/" title="Linkedin">Linkedin</a></li>
+				<li><a class="github" href="https://github.com/biversen21" title="Github">GitHub</a></li>
+        <!-- <li><a class="googleplus" href="#" title="Google+">Google+</a></li>
+        <li><a class="dribbble" href="#" title="Dribbble">Dribbble</a></li>
+        <li><a class="instagram" href="#" title="Instagram">Instagram</a></li>
+        <li><a class="flickr" href="#" title="Flickr">Flickr</a></li> -->
 			</ul>
 
 			<p>
-				Founder of YOUR COMPANY<br>
-				<a href="#">theultralinx.com</a><br>
-				<a href="">ultralinxweb.com</a>
+				Check out my latest projects!<br>
+				<a href="http://datageyser.herokuapp.com">Data Geyser</a><br>
+				<a href="http://chilling-vampire-3194.herokuapp.com">Oynx News</a>
 			</p>
 
-			<p>Want to send me a love letter? <a href="#">Email me</a>.</p>
+			<p>Want to send me a love letter? <a href="mailto:biversen21@gmail.com">Email me</a>.</p>
 		</div>
 	</body>
 </html>
